# nexabank

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  pom.xml
.github/workflows/: cd-dev.yml  cd-staging.yml  ci.yml
ai-layer/: Dockerfile  main.py  pyproject.toml
ai-layer/models/: loan_scorer.py
ai-layer/tests/: test_api.py  test_loan_scorer.py
docs/: HOW-TO-RUN.md  offshore-onshore-guide.md
docs/architecture-decision-records/: ADR-001-saga-pattern-for-transfers.md  ADR-002-outbox-pattern-for-event-reliability.md
docs/db-init/: 01-create-databases.sql
docs/learning/: 00-project-overview.md  01-spring-boot-microservices.md  02-spring-cloud-eureka-gateway.md  03-kafka-event-streaming.md  04-activemq-mq-messaging.md  05-ndm-batch-file-transfer.md  06-oracle-sql-schema.md  07-jwt-spring-security.md  08-feign-circuit-breaker.md  09-angular-standalone-components.md  10-ci-cd-jenkins-github-actions.md  11-design-patterns-used.md
frontend/nexabank-ui/: Dockerfile  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/nexabank-ui/src/: index.html  styles.scss
frontend/nexabank-ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
infrastructure/api-gateway/: Dockerfile  pom.xml
infrastructure/config-server/: Dockerfile  pom.xml
infrastructure/eureka-server/: Dockerfile  pom.xml
reports/: .gitignore
services/account-service/: Dockerfile  pom.xml
services/loan-service/: Dockerfile  pom.xml
services/notification-service/: Dockerfile  pom.xml
services/transaction-service/: Dockerfile  pom.xml
(+151 files in other folders)
