[project]
name = "nexabank-ai-layer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "pytest-html==4.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=.",
    "--cov-omit=tests/*",
    "--cov-report=html:../reports/pytest/coverage",
    "--cov-report=term-missing",
    "--html=../reports/pytest/report.html",
    "--self-contained-html",
]

[tool.coverage.run]
omit = ["tests/*", "conftest.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
